grammars/tree-sitter/grammar.js
		program: ($) => seq(optional($.hash_bang_line), repeat($.statement)),

		export_statement: ($) =>
			choice(
				seq(
					'export',
					choice(
						seq('*', $.from_clause),
						seq($.namespace_export, $.from_clause),
						seq($.export_clause, optional($.from_clause)),
						seq('default', choice($.declaration, seq($.expression, $._semicolon))),
						$.declaration,
					),
					$._semicolon,
				),
				seq(
					'export',
					'type',
					choice(seq('*', $.from_clause), seq($.export_clause, optional($.from_clause))),
					$._semicolon,
				),
			),

		export_clause: ($) => seq('{', commaSep($.export_specifier), optional(','), '}'),

		export_specifier: ($) =>
			seq(
				optional('type'),
				field('name', $.identifier),
				optional(seq('as', field('alias', $.identifier))),
			),

		import_statement: ($) =>
			seq(
				'import',
				optional('type'),
				choice(seq($.import_clause, $.from_clause), $.string),
				optional($._semicolon),
			),

		import_clause: ($) =>
			choice(
				$.namespace_import,
				$.named_imports,
				seq($.identifier, optional(seq(',', choice($.namespace_import, $.named_imports)))),
			),

		from_clause: ($) => seq('from', choice($.string, $.identifier)),

		namespace_import: ($) => seq('*', 'as', $.identifier),

		named_imports: ($) => seq('{', commaSep($.import_specifier), optional(','), '}'),

		import_specifier: ($) =>
			seq(
				optional('type'),
				field('name', choice($.identifier, $.string)),
				optional(seq('as', field('alias', $.identifier))),
			),

		expression_statement: ($) => seq($._expression_statement_expression, $._semicolon),

		_expression_statement_expression: ($) =>
			choice(
				$._expression_statement_primary_expression,
				$.satisfies_expression,
				$.assignment_expression,
				$.augmented_assignment_expression,
				$.await_expression,
				$.unary_expression,
				$.binary_expression,
				$.ternary_expression,
				$.update_expression,
				$.new_expression,
				$.yield_expression,
				$.parenthesized_expression,
				$.as_expression,
			),

		variable_declaration: ($) =>
			seq(choice('var', 'let', 'const'), commaSep1($.variable_declarator), $._semicolon),

		variable_declarator: ($) =>
			seq(
				field('name', choice($.identifier, $._destructuring_pattern)),
				optional($._type_annotation),
				optional($.initializer),
			),

		statement_block: ($) => seq('{', repeat($.statement), '}'),

		return_statement: ($) => seq('return', optional($.expression), $._semicolon),

		function_declaration: ($) =>
			prec.dynamic(
				PREC.DECLARATION,
				seq(
					optional('async'),
					'function',
					optional('*'),
					field('name', $.identifier),
					optional(field('type_parameters', $.type_parameters)),
					field('parameters', $.formal_parameters),
					optional($._type_annotation),
					field('body', choice($.statement_block, $.jsx_statement_container)),
				),
			),

		class_declaration: ($) =>
			seq(
				optional('abstract'),
				'class',
				field('name', $.identifier),
				optional(field('type_parameters', $.type_parameters)),
				optional($.class_heritage),
				field('body', $.class_body),
			),

		class_body: ($) =>
			seq(
				'{',
				repeat(choice($.method_definition, $.field_definition, $.class_static_block, ';')),
				'}',
			),

		field_definition: ($) =>
			seq(
				repeat(choice('static', 'readonly', 'declare', 'abstract', 'override')),
				field('property', $.property_name),
				optional('?'),
				optional($._type_annotation),
				optional($.initializer),
				$._semicolon,
			),

		method_definition: ($) =>
			seq(
				repeat(choice('static', 'async', 'readonly', 'abstract', 'override')),
				optional(choice('get', 'set', '*')),
				field('name', $.property_name),
				optional(field('type_parameters', $.type_parameters)),
				field('parameters', $.formal_parameters),
				optional($._type_annotation),
				field('body', choice($.statement_block, $.jsx_statement_container)),
			),

		formal_parameters: ($) => seq('(', optional(commaSep($._formal_parameter)), optional(','), ')'),

		_formal_parameter: ($) => choice($.required_parameter, $.rest_parameter),

		required_parameter: ($) =>
			seq(
				field('pattern', choice($.identifier, $._destructuring_pattern)),
				optional('?'),
				optional($._type_annotation),
				optional($.initializer),
			),

		_destructuring_pattern: ($) => choice($.object_pattern, $.array_pattern),

		object_pattern: ($) =>
			seq(
				'{',
				commaSep(
					choice(
						$.pair_pattern,
						$.rest_pattern,
						$.object_assignment_pattern,
						$.shorthand_property_identifier_pattern,
					),
				),
				optional(','),
				'}',
			),

		pair_pattern: ($) =>
			seq(
				field('key', $.property_name),
				':',
				field('value', choice($.pattern, $.assignment_pattern)),
			),

		rest_pattern: ($) => seq('...', $.identifier),

		array_pattern: ($) =>
			seq(
				'[',
				commaSep(choice($.pattern, $.assignment_pattern, $.rest_pattern)),
				optional(','),
				']',
			),

		await_expression: ($) => prec.left(PREC.CALL, seq('await', $.expression)),

		binary_expression: ($) =>
			choice(
				...[
					['&&', PREC.AND],
					['||', PREC.OR],
					['??', PREC.OR],
					['>>', PREC.TIMES],
					['>>>', PREC.TIMES],
					['<<', PREC.TIMES],
					['&', PREC.AND],
					['^', PREC.OR],
					['|', PREC.OR],
					['+', PREC.PLUS],
					['-', PREC.PLUS],
					['*', PREC.TIMES],
					['/', PREC.TIMES],
					['%', PREC.TIMES],
					['**', PREC.EXP],
					['<', PREC.REL],
					['<=', PREC.REL],
					['==', PREC.EQUALITY],
					['===', PREC.EQUALITY],
					['!=', PREC.EQUALITY],
					['!==', PREC.EQUALITY],
					['>=', PREC.REL],
					['>', PREC.REL],
					['instanceof', PREC.REL],
					['in', PREC.REL],
				].map(([operator, precedence]) =>
					prec.left(
						precedence,
						seq(
							field('left', $.expression),
							field('operator', operator),
							field('right', $.expression),
						),
					),
				),
			),

		update_expression: ($) =>
			prec.left(
				PREC.INC,
				choice(
					seq(field('argument', $.expression), field('operator', choice('++', '--'))),
					seq(field('operator', choice('++', '--')), field('argument', $.expression)),
				),
			),

		call_expression: ($) =>
			prec(
				PREC.CALL,
				seq(
					field('function', choice($.expression, $.import)),
					field('arguments', choice($.arguments, $.template_string)),
				),
			),

		member_expression: ($) =>
			prec(
				PREC.MEMBER,
				seq(
					field('object', choice($.expression, $.primary_expression)),
					choice('.', '?.'),
					field('property', choice($.identifier, $.private_property_identifier)),
				),
			),

		arguments: ($) =>
			seq('(', commaSep(choice($.expression, $.spread_element)), optional(','), ')'),

		arrow_function: ($) =>
			seq(
				optional('async'),
				choice(field('parameter', $.identifier), field('parameters', $.formal_parameters)),
				optional($._type_annotation),
				'=>',
				field('body', choice($.expression, $.statement_block, $.jsx_statement_container)),
			),

		property_name: ($) =>
			choice(
				$.identifier,
				$.private_property_identifier,
				$.string,
				$.number,
				$.computed_property_name,
			),

		shorthand_property_identifier: ($) =>
			alias($.identifier, $.shorthand_property_identifier_pattern),

		shorthand_property_identifier_pattern: ($) =>
			alias($.identifier, $.shorthand_property_identifier),

		array: ($) => seq('[', commaSep(choice($.expression, $.spread_element)), optional(','), ']'),

		template_string: ($) =>
			seq('`', repeat(choice($._template_chars, $.template_substitution)), '`'),

		template_substitution: ($) => seq('${', $.expression, '}'),

		this: ($) => 'this',
		identifier: ($) => {
			const alpha = /[^\x00-\x1F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
			const alphanumeric =
				/[^\x00-\x1F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
			return token(seq(alpha, repeat(alphanumeric)));
		},

		number: ($) => {
			const hex_literal = seq(choice('0x', '0X'), /[\da-fA-F](_?[\da-fA-F])*/);

			const decimal_digits = /\d(_?\d)*/;
			const signed_integer = seq(optional(choice('-', '+')), decimal_digits);
			const exponent_part = seq(choice('e', 'E'), signed_integer);

			const binary_literal = seq(choice('0b', '0B'), /[0-1](_?[0-1])*/);

			const octal_literal = seq(choice('0o', '0O'), /[0-7](_?[0-7])*/);

			const bigint_literal = seq(
				choice(hex_literal, binary_literal, octal_literal, decimal_digits),
				'n',
			);

			const decimal_integer_literal = choice(
				'0',
				seq(optional('0'), /[1-9]/, optional(seq(optional('_'), decimal_digits))),
			);

			const decimal_literal = choice(
				seq(decimal_integer_literal, '.', optional(decimal_digits), optional(exponent_part)),
				seq('.', decimal_digits, optional(exponent_part)),
				seq(decimal_integer_literal, exponent_part),
				decimal_digits,
			);

			return token(
				choice(hex_literal, decimal_literal, binary_literal, octal_literal, bigint_literal),
			);
		},

		string: ($) =>
			choice(
				seq('"', repeat(choice(token.immediate(prec(1, /[^"\\\n]+/)), $.escape_sequence)), '"'),
				seq("'", repeat(choice(token.immediate(prec(1, /[^'\\\n]+/)), $.escape_sequence)), "'"),
			),

		escape_sequence: ($) =>
			token.immediate(
				seq(
					'\\',
					choice(
						/[^xu0-7]/,
						/[0-7]{1,3}/,
						/x[0-9a-fA-F]{2}/,
						/u[0-9a-fA-F]{4}/,
						/u\{[0-9a-fA-F]+\}/,
						/[\r?][\n\u2028\u2029]/,
					),
				),
			),

		_type_annotation: ($) => seq(':', $.type),

		type: ($) =>
			choice(
				$.identifier,
				$.predefined_type,
				$.type_identifier,
				$.nested_type_identifier,
				$.generic_type,
				$.object_type,
				$.array_type,
				$.tuple_type,
				$.union_type,
				$.intersection_type,
				$.function_type,
				$.literal_type,
				$.parenthesized_type,
			),

		predefined_type: ($) =>
			choice('any', 'number', 'boolean', 'string', 'symbol', 'void', 'unknown', 'never', 'object'),

		initializer: ($) => seq('=', $.expression),

		_semicolon: ($) => choice($._automatic_semicolon, ';'),
	},
});

function commaSep(rule) {
	return optional(commaSep1(rule));
}

function commaSep1(rule) {
	return seq(rule, repeat(seq(',', rule)));
}
